# OfferFlow

./: .gitignore  CONTEXT.md  plan.md  想法.md
backend/: .env.example  README.md  pyproject.toml
backend/src/offerflow/: __init__.py  cli.py
backend/src/offerflow/api/: main.py  routes.py
backend/src/offerflow/harness/: models.py
backend/src/offerflow/harness/agents/: __init__.py  diagnosis_agents.py  orchestrator.py  protocol.py
backend/src/offerflow/harness/commands/: __init__.py  cli.py
backend/src/offerflow/harness/context/: __init__.py  manager.py
backend/src/offerflow/harness/engine/: __init__.py  llm_client.py  prompts.py  token_budget.py
backend/src/offerflow/harness/hooks/: __init__.py  registry.py
backend/src/offerflow/harness/memory/: __init__.py  store.py
backend/src/offerflow/harness/permission/: __init__.py  privacy.py
backend/src/offerflow/harness/sessions/: __init__.py
backend/src/offerflow/harness/skills/: __init__.py  diagnose_transcript.py  protocol.py
backend/src/offerflow/harness/tools/: __init__.py  analyze_content.py  analyze_expression.py  generate_report.py  protocol.py  query_knowledge_base.py  split_rounds.py
backend/src/offerflow/knowledge/: __init__.py
backend/tests/: test_agents.py  test_context.py  test_tools.py
docs/adr/: 0001-interview-round-as-unit.md  0002-harness-architecture.md  0003-evidence-source-abstraction.md
frontend/: .gitignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/router/: index.ts
(+3 files in other folders)
